<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReserveOn</string>
    <string name="action_settings">Settings</string>
    
    <string name="user_hint">usuário</string>
    <string name="pass_hint">senha</string>
    
    <string name="login_button_label">Logar</string>
    <string name="new_user_button_label">Novo usuário</string>
    
    <string name="btn_reserve_label">Fazer Reserva</string>
    
    <string name="table_status_free_label">Livre</string>
    <string name="table_status_occupied">Ocupada</string>
    <string name="description_occupied_table">Mesa ocupada</string>
    <string name="description_free_table">Mesa Livre</string>

    <string name="label_user_register">Usuário</string>
    <string name="label_password_register">Senha</string>
    <string name="user_register_hint">digite nome de usuário</string>
    <string name="password_register_hint">digite uma senha</string>
    
    <string name="label_btn_register">Registrar</string>
    <string name="label_rg_register">RG</string>
    <string name="rg_register_hint">digite seu rg</string>
    <string name="label_cpf_register">CPF</string>
    <string name="cpf_register_hint">digite seu cpf</string>
    
      <string name="email_register_hint">digite seu email</string>
    
      <string name="title_nova_conta">Criar Nova Conta</string>
</resources>
