<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.teamReserveOn.reserveon.LoginActivity" >

    <TextView
        android:id="@+id/app_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="text"
        android:hint="@string/user_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/pass_hint"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_login" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_label"
            android:onClick="initApp"/>
        <Button 
            android:id="@+id/btn_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_button_label"
            android:onClick="registerNewUser"/>
    </LinearLayout>

</LinearLayout>