<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/register_user_div" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
        android:id="@+id/label_user_register" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_user_register"/>
        <EditText
            android:id="@+id/register_user_field" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/user_register_hint"/>
        
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/register_password_div" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
        android:id="@+id/label_password_register" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_password_register"/>
        <EditText
            android:id="@+id/register_password_field" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_register_hint"/>
        
    </LinearLayout>
    
    
</LinearLayout>

